Сделал задание для занятия 5 ExtJS Продолжение и первое дополнительное задание

--- a/ibs-ulstu-java-webapp/src/main/webapp/resources/css/style.css
+++ b/ibs-ulstu-java-webapp/src/main/webapp/resources/css/style.css
@@ -1,3 +1,9 @@
 #mainDiv{
 	height: 100vh;	
 }
+.ship-search {
+   background-image: url(../images/ships/search.png);
+}
+.ship-clear {
+   background-image: url(../images/ships/clear.png);
+}
